Fixed member modal on mobile devices.

--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -121,7 +121,9 @@ hr
   .btn-close
     filter: invert(1)
     align-self: flex-start
-
+#modal-dj-avatar
+  max-height: 30vh
+  width: auto
 #modal-event
   .poster-wrapper
     height: 50vh
